06Nov00=======================================================================
1. Added sh/qrz to the list of callbook services
05Nov00=======================================================================
1. 75% speed up on sh/dx !, lower memory usage as well!
2. Fixed problem with clear/spot 0 (how did this one last so long!!!)
3. add 'on' in accept/reject spots as synonym for 'freq'
4. add the same speed up to general log printing
5. fixed help \ 
04Nov00=======================================================================
1. fix sh/filter so ity now works for any callsign (and not just connected
ones).
2. Have only one is_callsign and not an iscallsign as well.
3. Add set/hops and show/hops commands.
4. Add unset/badnode command and put some help in for these commands
03Nov00=======================================================================
1. allow - in filter strings
2. store only the filter expression NOTE BENE: you will need to clear all 
your existing filters and re-enter them!!!!!!
3. Added announce filtering
4. Fixed problem with announce filtering on output to the node
02Nov00=======================================================================
1. updated filtering logic. You will need to RECREATE your filters (clear/spot
all, then start again) for testing.
2. allow PC73 for DXNet
3. added some help text for filtering and filtering spots in particular.
01Nov00=======================================================================
1. put PC11 field 2 check back to m for pc text.
2. improve 'simple' callsign checking
3. Added the first cut of the new user/sysop filtering code. This cut works 
for spots and the syntax is:-

accept/spots [<call>] [input] [<filterno>] things ..
reject/spots [<call>] [input] [<filterno>] things ..

where things are: 
  freq 0/30000 | hf | hf/cw | 6m,4m,2m
  call G,PA,HB9
  info iota
  by G,PA,HB9
  call_dxcc 61,62
  call_itu 31
  call_zone 14,15,16
  by_dxcc 61,62
  by_itu 31
  by_zone 14,15,16
  origin GB7,MB7